--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ body {
     display: flex;
     width: 100%;
     height: 70%;
+    justify-content: space-around;
+    align-items: center;
+    gap: 100px;
     
 }
 
@@ -122,4 +125,20 @@ body {
 
 #computerHealth img {
     filter: drop-shadow(20px 20px 60px blue);
+}
+
+.selected {
+    width: 80%;
+    height: 200px;
+    filter: drop-shadow(20px 20px 60px green);
+}
+
+.battleHand {
+     width: auto;
+    height: 250px;
+}
+
+
+.losingHand {
+    filter: drop-shadow(20px 20px 60px red);
 }
