--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     width: 25%;
     border-radius: 20px;
     background-color: rgba(169, 169, 169, 0.5);
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -63,7 +63,7 @@ body {
     border-radius: 20px;
     padding: 20px;
     background-color: rgba(169, 169, 169, 0.5);
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 
@@ -76,11 +76,10 @@ body {
 #battleZone {
     display: flex;
     width: 100%;
-    height: 70%;
     justify-content: center;
     align-items: center;
-    gap: 10%;
-    
+    gap: 30%;
+    margin-bottom: 5%;
     
 }
 
@@ -104,10 +103,12 @@ body {
     height: 70%;
     justify-content: space-around;
     align-items: center;
+    gap: 10%;
+    margin-bottom: 10%;
 }
 
 .weapon {
-     width: 12dvh;
+     width: 15dvh;
     height: auto;
 }
 
@@ -179,7 +180,7 @@ body {
 }
 
 .battleHand {
-     width: 27dvh;
+     width: 30dvh;
     height: auto;
     animation-name: fadeIn;
     animation-duration: 1s;
